# LitePM

./: .gitignore  CMakeLists.txt  build.bat  build.sh
src/: CMakeLists.txt  main.c  util.h  window.h  wm.c  wm.h
tests/: CMakeLists.txt
